adding AC and return buttons

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,8 @@
 
 .number_button,
 .operator_button,
-.equal_button {
+.equal_button,
+.additional_button {
     width: 69px;
     height: 70px;
     margin: 3px;
