--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,15 @@
     cursor: pointer;
 }
 
+.additional_button:last-child {
+    color: #eee;
+    background-color: #999;
+}
+
 .number_button:active,
 .operator_button:active,
-.equal_button:active {
+.equal_button:active,
+.additional_button:active {
     box-shadow: none;
     background-color: #444;
 }
@@ -92,7 +98,80 @@
     width: 144px;
 }
 
-.additional_button:last-child {
+#modal_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0005;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal {
+    position: relative;
+    width: 300px;
+    background-color: #ddd;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.switch_button {
+    margin-top: 10px;
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+}
+
+.switch_button:hover {
+    cursor: pointer;
+    color: #777;
+}
+
+#modal p {
+    margin: 0;
+}
+
+.close_button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close_button:hover {
+    color: #777;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+form label {
+    margin-bottom: 5px;
+}
+
+form input {
+    margin-bottom: 10px;
+}
+
+form input[type="submit"] {
+    width: 100%;
+    height: 30px;
+    background-color: #777;
     color: #eee;
-    background-color: #999;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
