--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@
     align-items: center;
 }
 
-#modal {
+.modal {
     position: relative;
     width: 300px;
     background-color: #ddd;
@@ -121,17 +121,8 @@
     justify-content: space-between;
 }
 
-#over9000_div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #ddd;
-    padding: 15px;
-    border-radius: 5px;
-}
-
 #img_over9000 {
-    width: 400px;
+    width: 100%;
 }
 
 .switch_button {
