--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,8 @@
     margin: 0;
 }
 
-.close_button {
+.close_button,
+.delete_button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -172,10 +173,45 @@ form input {
 
 form input[type="submit"] {
     width: 100%;
-    height: 30px;
     background-color: #777;
     color: #eee;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#saved_cal_list {
+    margin-top: 10px;
+    padding: 0;
+    text-align: left;
+    list-style-type: none;
+}
+
+.calcul_card {
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.calcul_card p {
+    margin: 0;
+    padding: 0 20px;
+    cursor: pointer;
+    overflow-wrap: anywhere;
+}
+
+.calcul_card > div {
+    position: relative;
+    display: flex;
+    align-items: end;
+    background-color: #999;
+    min-height: 50px;
+    padding: 10px 0;
+    border-radius: 5px;
+    box-shadow: inset 0px 0px 5px #0005;
+}
+
+.delete_button {
+    top: 5px;
+    right: 5px;
 }
