--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,32 @@ form input[type="submit"] {
     top: 5px;
     right: 5px;
 }
+
+header {
+    margin-top: 20px;
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+nav button {
+    background-color: #777;
+    padding: 10px;
+    margin: 0 5px;
+    color: #eee;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+nav button:hover {
+    background-color: #999;
+}
